# coffee-newsletter

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Makefile  README.md  ROADMAP.md  alembic.ini  compose.yaml  pyproject.toml  railway.toml  run_pipeline.py  samconfig.toml  template.yaml
.github/: dependabot.yaml
.github/workflows/: ci.yml  deploy.yaml  lint.yaml  newsletter.yaml  newsletter.yml  release.yaml
app/: main.py
app/api/v1/: health.py  newsletter.py
app/core/: config.py  consts.py  database.py  dependencies.py
app/models/: __init__.py  newsletter.py
app/services/: newsletter.py  subscriber.py
app/static/: index.html
apps/api/: main.py  security.py
apps/api/dependencies/: newsletter.py
apps/api/routes/v1/: health.py  newsletter.py
apps/api/schemas/: __init__.py  newsletter.py
apps/api/security/: __init__.py  middleware.py
apps/newsletter_pipeline/: main.py
apps/web/: 404.html  500.html  about.html  index.html  privacy.html  terms.html  unsubscribe.html  vercel.json
apps/web/js/: index.js  unsubscribe.js
apps/web/styles/: index.css  pages.css
docs/: README.md
docs/api/: endpoints.md
docs/architecture/: decisions.md  overview.md  packages.md
docs/development/: environment.md  getting-started.md
docs/infrastructure/: deployment.md  pipeline.md
migrations/: env.py
migrations/versions/: f51f0d54897f_subscriber_model.py
pipeline/: main.py  renderer.py  scraper.py  sender.py  summarizer.py
pipeline/schemas/: scraper.py  summarizer.py
scripts/: make_sam_params.sh
templates/emails/: newsletter_item.html
tests/: conftest.py
tests/fakes/: fake_ai.py  fake_mailer.py
tests/fixtures/: sample_feed.xml
tests/integration/: test_stats_endpoint.py  test_subscribe_endpoint.py  test_unsubscribe_endpoint.py
tests/unit/: test_schemas.py  test_scraper.py  test_summarizer.py
tests/unit/services/: test_newsletter_service.py  test_subscriber_service.py
web/: main.py
web/api/: main.py
web/api/v1/: health.py
web/static/: index.html
