[project]
name = "coffee-newsletter"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "resend>=2.30.0",
    "sendgrid>=6.12.5",
    "uvicorn>=0.46.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.1",
    "jinja2>=3.1.6",
]

[tool.fastapi]
entrypoint = "apps.api.main:app"

[dependency-groups]
dev = [
    "ipython>=9.13.0",
]
