[project]
name = "coffee-newsletter"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.1",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.136.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "resend>=2.30.1",
    "sendgrid>=6.12.5",
    "uvicorn>=0.49.0",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.2",
    "jinja2>=3.1.6",
    "fastapi-csrf-protect>=1.0.7",
    "slowapi>=0.1.9",
]

[tool.fastapi]
entrypoint = "apps.api.main:app"

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "packages/database/migrations",
    "__pycache__"
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B008", # do not perform function calls in default args (FastAPI depende disso)
    "E501", # line too long — deixa o formatter cuidar
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
explicit_package_bases = true
# warn_return_any = true
# disallow_untyped_defs = true
exclude = [
    "packages/database/migrations",
    "apps/web",
]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]

[[tool.mypy.overrides]]
module = "resend.*"
ignore_missing_imports = true
